[package]
name = "skillet_cli_common"
version = "0.1.0"
edition = "2021"

[dependencies]
skillet_core.workspace = true
skillet_hardening.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml = "0.9"
