[package]
name = "skillet"
version = "0.1.0"
edition = "2021"

[dependencies]
skillet_core.workspace = true
skillet_hardening.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0"
serde.workspace = true
serde_yaml = "0.9"
hex.workspace = true
tempfile.workspace = true
