[package]
name = "skillet"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
skillet_core.workspace = true
skillet_hardening.workspace = true
skillet_pihole.workspace = true
skillet_podman.workspace = true
skillet_cli_common.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0"
serde.workspace = true
serde_yml.workspace = true
hex.workspace = true
tempfile.workspace = true
users.workspace = true
cargo_metadata = "0.23.1"
thiserror.workspace = true
