[package]
name = "skillet_hardening"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
skillet_core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
skillet_core = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
